# Game-Engine-Architecture

./: .gitmodules  CMakeLists.txt  README.md
build-scripts/: build_proj.bat  build_sln.bat
src/: main.cpp
