cmake_minimum_required(VERSION 3.8)
project(GameEngine VERSION 1.0)
set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PROJECT_NAME})
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -DDEBUG")

include_directories(${PROJECT_SOURCE_DIR}/library_binaries/include/)
find_package(OpenGL REQUIRED)
find_package(ASSIMP REQUIRED PATHS ${PROJECT_SOURCE_DIR}/library_binaries)
find_package(GLEW REQUIRED PATHS ${PROJECT_SOURCE_DIR}/library_binaries)
find_package(glm REQUIRED PATHS ${PROJECT_SOURCE_DIR}/library_binaries)
find_package(SDL2 REQUIRED PATHS ${PROJECT_SOURCE_DIR}/library_binaries)
set(SDL2_IMAGE_LIBRARIES "${PROJECT_SOURCE_DIR}/library_binaries/lib/SDL2_image.lib")
set(SDL2_MIXER_LIBRARIES "${PROJECT_SOURCE_DIR}/library_binaries/lib/SDL2_mixer.lib")
set(SDL2_TTF_LIBRARIES "${PROJECT_SOURCE_DIR}/library_binaries/lib/SDL2_ttf.lib")
set(GLEW_LIBRARIES "${PROJECT_SOURCE_DIR}/library_binaries/lib/glew-shared.lib")
set(OPENGL opengl32)

file(GLOB_RECURSE SOURCE "src/*.*")
file(GLOB LIBRARIES "library_binaries/bin/*.dll")
file(COPY ${LIBRARIES} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/Release)
file(COPY ${LIBRARIES} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/Debug)
file(COPY ${LIBRARIES} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/MinSizeRel)
file(COPY ${LIBRARIES} DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/build/RelWithDebInfo)

add_executable(${PROJECT_NAME} ${SOURCE})
target_link_libraries(${PROJECT_NAME} ${ASSIMP_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${GLEW_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SDL2_IMAGE_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SDL2_MIXER_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${SDL2_TTF_LIBRARIES})
target_link_libraries(${PROJECT_NAME} ${OPENGL})